# voice-toolbox

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  voice_toolbox.toml.example
apps/web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.ts
docs/: configuration.md
docs/providers/: fish-audio.md  mimo.md  mlx-audio.md  openrouter.md  volcengine.md
docs/smoke/: fish-audio.md  mimo.md  mlx-audio.md  openrouter.md  volcengine.md
docs/superpowers/plans/: 2026-06-26-voice-toolbox-implementation.md  2026-06-27-config-logging-provider-normalization.md  2026-06-28-i18n-theme.md  2026-06-28-voice-toolbox-ui-redesign-implementation.md  2026-06-29-chunking-and-tts-file-input.md  2026-07-02-mlx-audio-provider.md  2026-07-04-podcast-implementation.md
docs/superpowers/specs/: 2026-06-26-voice-toolbox-design.md  2026-06-27-config-logging-provider-normalization-design.md  2026-06-28-i18n-theme-design.md  (+5 more)
tests/: test_api.py  test_artifacts.py  test_audio_conversion.py  test_chunking_audio.py  test_chunking_text.py  test_cli.py  test_config.py  test_fish_audio_provider.py  test_imports.py  test_logging_config.py  test_mimo_provider.py  test_mlx_audio_provider.py  test_models.py  test_normalizers.py  test_openrouter_provider.py  test_pipeline.py  test_podcast_audio.py  test_podcast_jobs.py  test_podcast_parser.py  test_provider_config.py  test_provider_options.py  test_provider_registry.py  test_server.py  test_transcripts.py  test_volcengine_provider.py
(+51 files in other folders)
