[project]
name = "voice-toolbox"
version = "0.1.0"
description = "Local-first voice toolbox for TTS and ASR providers"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "loguru>=0.7",
  "openai>=1.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "ty>=0.0.54",
]

[project.scripts]
voice-toolbox = "voice_toolbox.cli:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["packages/voice_toolbox/src", "apps/api/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/voice_toolbox/src", "apps/api/src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ty.environment]
root = ["packages/voice_toolbox/src", "apps/api/src"]
